2016-10-21  Adam Bergkvist  <adam.bergkvist@ericsson.com>

        WebRTC: [GTK] Add MediaEndpointOwr - an OpenWebRTC WebRTC backend
        https://bugs.webkit.org/show_bug.cgi?id=163327

        Reviewed by Philippe Normand.

        Add manual WebRTC test. Test features:
        - Two RTCPeerConnection instances communicate in a single browser tab.
        - Supports setting up bidirectional media with a single SDP dialog, as
          well as one direction at a time.
        - Strips vendor prefixes (runs in Chrome and Firefox as well)
        - Supports modern as well as legacy APIs (mainly to make the test run
          in Chrome)

        * ManualTests/webrtc-one-tab-p2p.html: Added.

2016-10-20  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Configures but fails to link with ENABLE_OPENGL=OFF
        https://bugs.webkit.org/show_bug.cgi?id=163449

        Reviewed by Michael Catanzaro.

        Remove wrong dependency of Wayland on OpenGL introduced in r190615, it should be possible to build for Wayland
        without GL.

        * Source/cmake/OptionsGTK.cmake:

2016-10-20  Fujii Hironori  <Hironori.Fujii@sony.com>

        [CMake] CMake does not support the dep files for implicit dependency
        https://bugs.webkit.org/show_bug.cgi?id=161433

        Reviewed by Brent Fulgham.

        Created a Perl script to generate all IDL bindings for CMake.
        This script can regenerate outdated bindings by based on the
        supplemental dependency and dep files created by
        '--write-dependencies' switch of generate-bindings.pl.

        add_custom_target is used to invoke the script instead of
        add_custom_command because Ninja deletes all output files before
        executing the command in case of add_custom_command.

        USES_TERMINAL option of add_custom_target has two effects:
        1) Not buffering output of the command
        2) Invoking the command in the special Ninja pool which inhibits parallel build