@@ -186,10 +186,12 @@ if (ENABLE_GEOLOCATION)
     list(APPEND GLIB_COMPONENTS gio-unix)
     find_package(GeoClue2 2.1.5)
     if (GEOCLUE2_FOUND)
-      set(USE_GEOCLUE2 1)
+        SET_AND_EXPOSE_TO_BUILD(USE_GEOCLUE2 ${GEOCLUE2_FOUND})
     else ()
-      find_package(GeoClue)
-      set(USE_GEOCLUE2 0)
+        find_package(GeoClue)
+        if (NOT GEOCLUE_FOUND)
+            message(FATAL_ERROR "Geoclue is needed for ENABLE_GEOLOCATION.")
+        endif ()
     endif ()
 endif ()
 
