@@ -1,3 +1,12 @@
+2016-10-21  Csaba Osztrogonác  <ossy@webkit.org>
+
+        [EFL] REGRESSION(r207616): Build is broken due to missing libgeoclue-dev package
+        https://bugs.webkit.org/show_bug.cgi?id=163733
+
+        Reviewed by Gyuyoung Kim.
+
+        * efl/install-dependencies: Added geoclue-2.0 package.
+
 2016-10-21  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, rolling out r207609.
